Replaced data annotation with autogenerated lombok annotations and methods.